[gd_scene load_steps=6 format=2]

[ext_resource path="res://food/juice.png" type="Texture" id=1]
[ext_resource path="res://food/food.gd" type="Script" id=2]
[ext_resource path="res://sounds/hover_shortened.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/food_apple_drop_onto_fruit_in_bowl_001.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.6581, 53.6872 )

[node name="food" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.642456, -53.9204 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -57.826 )
texture = ExtResource( 1 )

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
bus = "sfx"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "sfx"
[connection signal="input_event" from="." to="." method="_on_food_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_food_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_food_mouse_exited"]
